# local-dream

./: .gitignore  README.md  convert.bat  convert.py  convert.sh
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  build.sh
app/src/main/cpp/src/: INpuModel.hpp  MtkModel.hpp  MtkRuntime.hpp  MtkRuntime.inl.hpp  PipelineNpuBase.hpp  PipelineQnn.hpp  PipelineSd15Mtk.hpp  PipelineSdxlMtk.hpp  QnnModel.hpp  main.cpp
app/src/main/java/io/github/xororz/localdream/data/: HistoryManager.kt  Model.kt
app/src/main/java/io/github/xororz/localdream/service/: BackendService.kt  BackgroundGenerationService.kt  ModelDownloadService.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-zh/: strings.xml
docs/: device-qa-mt6991.md
tools/convert/: README.md  convert.py
tools/mtk-convert/: README.md  aot_compile.py  batch_convert.sh  convert_sd15.py  convert_sdxl.py  export_mnn_clip.py  export_onnx.py  onnx_to_tflite.py  package_model.py  requirements.txt  upload_models.sh
tools/mtk-convert/cvtbase/: .gitkeep
tools/npu-convert/: README.md  pyproject.toml  requirements-mtk.txt
tools/npu-convert/examples/: batch.yaml
tools/npu-convert/ld_convert/: __init__.py  __main__.py  cli.py  config.py  download.py  env.py  platform.py  run.py  ui.py  wizard.py  wsl.py
tools/npu-convert/ld_convert/mediatek/: __init__.py  clip.py  convert.py
tools/npu-convert/ld_convert/qualcomm/: __init__.py  sd15.py  sdxl.py
(+11 files in other folders)
