[project]
name = "ld-npu-convert"
version = "0.1.0"
description = "Automated NPU model conversion for Local Dream (Qualcomm QNN + MediaTek LiteRT)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.scripts]
ld-convert = "ld_convert.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ld_convert"]
